<resources>
    <string name="app_name">Cosplanner</string>
    <string name="filter_status_header">Hiển thị:</string>
    <string name="sort_type_header">Phân loại theo:</string>
    <string name="order_type_header">Sắp xếp theo:</string>
    <string name="cos_list_empty_text">Không tìm thấy Project Cosplay nào</string>
    <string name="con_desc_image_cos">Cosplay Image</string>
    <string name="bought">Đã mua</string>
    <string name="made">Đã làm</string>
    <string name="cos_title_new">Project Cosplay Mới</string>
    <string name="cos_in_process">Đang làm</string>
    <string name="cos_planned">Dự định</string>
    <string name="con_desc_ic_all_cosplays">Icon Show All Cosplays</string>
    <string name="con_desc_ic_only_completed">Icon Only Completed</string>
    <string name="con_desc_ic_only_uncompleted">Icon Only Uncompleted</string>
    <string name="con_desc_ic_by_name">Icon By Character</string>
    <string name="con_desc_ic_by_series">Icon By Series</string>
    <string name="con_desc_ic_by_init_date">Icon By Initial Date</string>
    <string name="con_desc_ic_by_due_date">Icon By Due Date</string>
    <string name="con_desc_ic_by_budget">Icon By Budget</string>
    <string name="con_desc_ic_by_total_cost">Icon By Total Cost</string>
    <string name="con_desc_ic_most_to_least">Icon Most to Least</string>
    <string name="con_desc_ic_least_to_most">Icon Least to Most</string>
    <string name="con_desc_ic_form_character">Icon Form Character</string>
    <string name="con_desc_ic_form_series">Icon Form Series</string>
    <string name="con_desc_ic_form_init_date">Icon Form Init Date</string>
    <string name="con_desc_ic_form_due_date">Icon Form Due Date</string>
    <string name="con_desc_ic_form_budget">Icon Form Budget</string>
    <string name="cos_character_hint">Tên nhân vật</string>
    <string name="cos_series_hint">Tên series</string>
    <string name="cos_date_text">Ngày bắt đầu</string>
    <string name="cos_due_date_text">Ngày kết thúc (dự kiến)</string>
    <string name="cos_budget_text">Ngân quỹ (dự kiến)</string>
    <string name="save">Lưu</string>
    <string name="cancel">Huỷ</string>
<!--    <string name="close">Đóng</string>-->
    <string name="delete">Xoá</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>