<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="1dp">
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:id="@+id/Cos_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cos_title_new"/>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/Cos_RowStatusRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_below="@+id/Cos_Title">
            <RadioGroup
                android:orientation="horizontal"
                android:id="@+id/Cos_StatusRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"/>

                <RadioButton
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/Cos_StatusRadio_InProcess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cos_in_process"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:layout_weight="1"/>

                <RadioButton
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/Cos_StatusRadio_Planned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cos_planned"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/Cos_RowEditTextCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:baselineAligned="false"
            android:layout_below="@+id/Cos_RowStatusRadio">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_form_character"
                android:contentDescription="@string/con_desc_ic_form_character"/>

            <EditText
                android:layout_gravity="center_vertical"
                android:id="@+id/Cos_EditTextCharacter"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:background="@color/white"
                android:hint="@string/cos_character_hint"
                android:ems="12"
                android:maxLength="40"
                android:inputType="textCapSentences"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/Cos_RowEditTextSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:baselineAligned="false"
            android:layout_below="@+id/Cos_RowEditTextCharacter">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_form_series"
                android:contentDescription="@string/con_desc_ic_form_series"/>

            <EditText
                android:layout_gravity="center_vertical"
                android:id="@+id/Cos_EditTextSeries"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:background="@color/white"
                android:hint="@string/cos_series_hint"
                android:ems="12"
                android:maxLength="40"
                android:inputType="textCapSentences"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/Cos_RowEditTextInitDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:baselineAligned="false"
            android:layout_below="@+id/Cos_RowEditTextSeries">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_form_init_date"
                android:contentDescription="@string/con_desc_ic_form_init_date"/>

            <EditText
                android:layout_gravity="center_vertical"
                android:id="@+id/Cos_EditTextInitDate"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:background="@color/white"
                android:hint="@string/cos_date_text"
                android:ems="12"
                android:editable="false"
                android:inputType="date"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/Cos_RowEditTextDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:baselineAligned="false"
            android:layout_below="@+id/Cos_RowEditTextInitDate">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_form_due_date"
                android:contentDescription="@string/con_desc_ic_form_due_date"/>

            <EditText
                android:layout_gravity="center_vertical"
                android:id="@+id/Cos_EditTextDueDate"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:background="@color/white"
                android:hint="@string/cos_due_date_text"
                android:ems="12"
                android:inputType="date"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/Cos_RowEditTextBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:baselineAligned="false"
            android:layout_below="@+id/Cos_RowEditTextDueDate">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_form_budget"
                android:contentDescription="@string/con_desc_ic_form_budget"/>

            <EditText
                android:layout_gravity="center_vertical"
                android:id="@+id/Cos_EditTextBudget"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/white"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:hint="@string/cos_budget_text"
                android:ems="12"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_below="@+id/Cos_RowEditTextBudget">

            <Button
                android:textSize="12sp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:id="@+id/Cos_ButtonCancel"
                android:background="@drawable/custom_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:drawableTop="@drawable/ic_cancel"
                android:layout_weight="1"/>

            <Button android:textSize="12sp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:id="@+id/Cos_ButtonSave"
                android:background="@drawable/custom_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:drawableTop="@drawable/ic_save"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>