<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/row"
    android:padding="4dp">

    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/CosListImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/empty_character"
        android:contentDescription="@string/con_desc_image_cos"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="bottom|left|center_vertical|center_horizontal|center"
            android:id="@+id/CosListName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:singleLine="true"/>

        <TextView
            android:textSize="13sp"
            android:textStyle="normal"
            android:textColor="#c0c0c0"
            android:gravity="top|left|center_vertical|center_horizontal|center"
            android:id="@+id/CosListSeries"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/CosListViewPercent"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="#eaeaea"
            android:gravity="right|center_vertical|center_horizontal|center"
            android:id="@+id/CosListViewPercentTotalPercent"
            android:padding="2dp"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:singleLine="true"/>

        <ProgressBar
            android:layout_gravity="right|center_vertical|center_horizontal|center"
            android:id="@+id/CosListViewPercentProgresBar"
            android:layout_width="60dp"
            android:layout_height="4dp"
            android:max="100"
            android:progressDrawable="@drawable/custom_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/CosListViewBrokenPercent"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="9sp"
                android:textStyle="normal"
                android:textColor="#eaeaea"
                android:gravity="left|center_vertical|center_horizontal|center"
                android:layout_width="45dp"
                android:layout_height="19dp"
                android:text="@string/bought"
                android:singleLine="true"/>

            <TextView android:textSize="10sp"
                android:textStyle="normal"
                android:textColor="#eaeaea"
                android:gravity="right|center_vertical|center_horizontal|center"
                android:id="@+id/CosListViewBrokenPercentBuy"
                android:layout_width="30dp"
                android:layout_height="19dp"
                android:singleLine="true"/>
        </LinearLayout>

        <ProgressBar
            android:layout_gravity="right|center_vertical|center_horizontal|center"
            android:id="@+id/CosListViewBrokenPercentProgresBarBuy"
            android:layout_width="75dp"
            android:layout_height="3dp"
            android:max="100"
            android:progressDrawable="@drawable/custom_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="9sp"
                android:textStyle="normal"
                android:textColor="#eaeaea"
                android:gravity="left|center_vertical|center_horizontal|center"
                android:layout_width="45dp"
                android:layout_height="19dp"
                android:text="@string/made"
                android:singleLine="true"/>

            <TextView
                android:textSize="10sp"
                android:textStyle="normal"
                android:textColor="#eaeaea"
                android:gravity="right|center_vertical|center_horizontal|center"
                android:id="@+id/CosListViewBrokenPercentMake"
                android:layout_width="30dp"
                android:layout_height="19dp"
                android:singleLine="true"/>
        </LinearLayout>

        <ProgressBar
            android:layout_gravity="right|center_vertical|center_horizontal|center"
            android:id="@+id/CosListViewBrokenPercentProgressBarMake"
            android:layout_width="75dp"
            android:layout_height="3dp"
            android:max="100"
            android:progressDrawable="@drawable/custom_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/CosListViewDates"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="12sp"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:gravity="bottom|right|center_vertical|center_horizontal|center"
            android:id="@+id/CosListViewDatesInit"
            android:padding="2dp"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:singleLine="true"/>

        <TextView
            android:textSize="12sp"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:gravity="top|right|center_vertical|center_horizontal|center"
            android:id="@+id/CosListViewDatesEnd"
            android:padding="2dp"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/CosListViewGeneralInfo"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="12sp"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:gravity="right|center_vertical|center_horizontal|center"
            android:layout_gravity="center_vertical"
            android:id="@+id/CosListViewGeneralInfoText"
            android:padding="2dp"
            android:layout_width="70dp"
            android:layout_height="50dp"/>
    </LinearLayout>

</LinearLayout>